--- a/src/app/students/student-dashboard/student-dashboard.component.html
+++ b/src/app/students/student-dashboard/student-dashboard.component.html
@@ -18,6 +18,11 @@
         <i class="bi bi-incognito"></i> My Courses
       </a>
     </li>
+      <li>
+      <a href="/result">
+        <i class="bi bi-incognito"></i> Result
+      </a>
+    </li>
     <li>
       <a href="/contact">
         <i class="bi bi-person-fill"></i> Contact
