--- a/src/app/teachers/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/teachers/teacher-dashboard/teacher-dashboard.component.html
@@ -24,6 +24,13 @@
 
           </a>
       </li>
+
+          <li>
+          <a href="/submitList">
+             <i class="bi bi-mortarboard-fill"></i> Submitted Assignment
+
+          </a>
+      </li>
       <li><a href="/feedback">  <i class="bi bi-wechat"></i>Feedback</a></li>
 
       <li><a href="#">
